--- a/tpmlwebref_emailtemplate.htm
+++ b/tpmlwebref_emailtemplate.htm
@@ -250,7 +250,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">10</td>
-                                                    <td><time>諮詢服務課1</time></td>
+                                                    <td><time>讀者版(判斷不公開轉相關單位)</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -263,7 +263,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">9</td>
-                                                    <td><time>諮詢服務課2</time></td>
+                                                    <td><time>讀者版(判斷公開)/time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -276,7 +276,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">8</td>
-                                                    <td><time>諮詢服務課3</time></td>
+                                                    <td><time>閱覽課</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -289,7 +289,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">7</td>
-                                                    <td><time>諮詢服務課4</time></td>
+                                                    <td><time>其他課室1</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -302,7 +302,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">6</td>
-                                                    <td><time>諮詢服務課5</time></td>
+                                                    <td><time>其他課室2</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -315,7 +315,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">5</td>
-                                                    <td><time>諮詢服務課6</time></td>
+                                                    <td><time>其他課室3</time></td>
                                                     <td><span class="green">未啟用</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -328,7 +328,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">4</td>
-                                                    <td><time>諮詢服務課7</time></td>
+                                                    <td><time>其他課室4</time></td>
                                                     <td><span class="green">未啟用</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -341,7 +341,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">3</td>
-                                                    <td><time>諮詢服務課8</time></td>
+                                                    <td><time>其他課室5</time></td>
                                                     <td><span class="green">未啟用</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -354,7 +354,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">2</td>
-                                                    <td><time>諮詢服務課9</time></td>
+                                                    <td><time>其他課室6</time></td>
                                                     <td><span class="green">未啟用</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -367,7 +367,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">10</td>
-                                                    <td><time>諮詢服務課10</time></td>
+                                                    <td><time>其他課室7</time></td>
                                                     <td><span class="green">未啟用</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
