--- a/tpmlwebref_emailtemplate.htm
+++ b/tpmlwebref_emailtemplate.htm
@@ -263,7 +263,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">9</td>
-                                                    <td><time>讀者版(判斷公開)/time></td>
+                                                    <td><time>讀者版(判斷公開)</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
