--- a/tpmlwebref_reviewedit.htm
+++ b/tpmlwebref_reviewedit.htm
@@ -138,7 +138,7 @@
                                     <div class="tab_items">
                                     </div>
                                 </div>
-                                <!--頁籤區-->
+                                                                <!--頁籤區-->
                                 <div class="tab__content">
                                     <!--tabcontent 1--><!--會員設定-->
                                     <div class="active">
@@ -146,6 +146,16 @@
                                             <div class="_head">
                                                 <h3>審核編輯資訊</h3>
                                             </div>
+                                            <div class="form_content">
+                                                <div class="radio_grp form_inline">
+                                                    <div class="form_title">發佈狀態<abbr></abbr></div>
+                                                    <label><input name="radioSample3333" type="radio" checked=""
+                                                            value="" disabled><span>不公開</span></label>
+                                                    <label><input name="radioSample3333" type="radio" value=""
+                                                            disabled><span>公開</span></label>
+                                                </div>
+                                            </div>
+                                            <hr>
                                             <div class="_content">
                                                 <div class="flex-form">
                                                     <div class="form_grp">
