--- a/tpmlwebref_questionsearch.htm
+++ b/tpmlwebref_questionsearch.htm
@@ -289,33 +289,32 @@
                             <div class="_head">
                                 <h3>處理方式</h3>
                             </div>
-                            <div class="_head">
+                           <div class="_head">
                                 <div class="tag">
                                     處理階段：
                                     <ul>
                                         <li class="active"><a href="#">全部</a></li>
                                         <li><a href="#">未處理</a></li>
                                         <li><a href="#">處理中</a></li>
+                                        <li><a href="#">已轉介</a></li>
                                         <li><a href="#">送陳</a></li>
                                         <li><a href="#">簽核</a></li>
-                                        <li><a href="#">修改</a></li>
                                         <li><a href="#">退文</a></li>
                                         <li><a href="#">無需處理</a></li>
-                                        <li><a href="#">已轉介</a></li>
-                                        <li><a href="#">已結案</a></li>
+                                        <li><a href="#">結案</a></li>
                                     </ul>
                                     <br>
                                     處理結果：
                                     <ul>
                                         <li class="active"><a href="#">全部</a></li>
+                                        <li><a href="#">處理中</a></li>
+                                        <li><a href="#">處理中</a></li>
+                                        <li><a href="#">已結案</a></li>
+                                        <li><a href="#">送陳</a></li>
                                         <li><a href="#">已回覆</a></li>
                                         <li><a href="#">處理中</a></li>
                                         <li><a href="#">不予處理</a></li>
-                                        <li><a href="#">未答覆</a></li>
-                                        <li><a href="#">完全解答</a></li>
-                                        <li><a href="#">部分解答</a></li>
-                                        <li><a href="#">無法解答</a></li>
-                                        <li><a href="#">指引使用方式</a></li>
+                                        <li><a href="#">已結案(轉介、完全解答、部分解答、無法解答)</a></li>
                                     </ul>
                                 </div>
                                 <!-- 頁碼 -->
