--- a/tpmlwebref_questionsearch.htm
+++ b/tpmlwebref_questionsearch.htm
@@ -289,7 +289,7 @@
                             <div class="_head">
                                 <h3>處理方式</h3>
                             </div>
-                           <div class="_head">
+                            <div class="_head">
                                 <div class="tag">
                                     處理階段：
                                     <ul>
@@ -312,10 +312,28 @@
                                         <li><a href="#">送陳</a></li>
                                         <li><a href="#">已回覆</a></li>
                                         <li><a href="#">不予處理</a></li>
-                                        <li><a href="#">已結案(轉介、完全解答、部分解答、無法解答)</a></li>
+                                        <li><a href="#">已結案</a></li>
                                     </ul>
                                 </div>
                                 <!-- 頁碼 -->
+                                <div class="control_panel">
+                                    <div class="dropdown">
+                                        <button class="btn dropdown-btn">
+                                            <i class="i_setting"></i>批次處理</button>
+                                        <div class="dropdown-content">
+                                            <ul>
+                                                <li>
+                                                    <button class="btn">
+                                                        <i class="i_add"></i>批次匯出</button>
+                                                </li>
+                                                <li>
+                                                    <button class="btn">
+                                                        <i class="i_add"></i>批次刪除下架</button>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="pagination">
                                     <form action="" class="form_inline">
                                         <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select
@@ -339,8 +357,8 @@
                                     <table class="table_hover">
                                         <thead>
                                             <tr>
-                                                <th class="text-left">
-                                                    <a href="#">序號<i class="i_sort"></i></a>
+                                                <th><input type="checkbox"></th>
+                                                <th><a href="#">序號<i class="i_sort"></i></a></th>
                                                 </th>
                                                 <th><a href="#">提問時間<i class="i_sort"></i></a></th>
                                                 <th class="text-center">讀者問題描述</th>
@@ -356,6 +374,7 @@
                                         </thead>
                                         <tbody>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">10</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
@@ -374,6 +393,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">9</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
@@ -394,6 +414,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">8</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
@@ -414,6 +435,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">7</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
@@ -446,6 +468,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">6</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
@@ -467,6 +490,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">5</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
@@ -489,6 +513,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">4</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
@@ -509,6 +534,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">3</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
@@ -530,6 +556,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">2</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
@@ -549,6 +576,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num">1</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
