--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -157,7 +157,7 @@
                                             </div>
                                             <div class="_content">
                                                 <div class="form_grp">
-                                                    <div class="form_title">發佈選項<abbr>*</abbr></div>
+                                                    <div class="form_title">發布選項<abbr>*</abbr></div>
                                                     <div class="form_content">
                                                         <div class="radio_grp form_inline">
                                                             <label><input name="MenuUse" id="mobileMenuUse" type="radio"
