--- a/tpmlwebref_reviewedit.htm
+++ b/tpmlwebref_reviewedit.htm
@@ -146,13 +146,13 @@
                                             <div class="_head">
                                                 <h3>審核編輯資訊</h3>
                                             </div>
-                                            <div class="form_content">
-                                                <div class="radio_grp form_inline">
-                                                    <div class="form_title">發佈狀態<abbr></abbr></div>
-                                                    <label><input name="radioSample3333" type="radio" checked=""
-                                                            value="" disabled><span>不公開</span></label>
-                                                    <label><input name="radioSample3333" type="radio" value=""
-                                                            disabled><span>公開</span></label>
+                                            <div class="radio_grp form_inline">
+                                                <label>發布選項<abbr>*</abbr><input name="MenuUse" id="mobileMenuUse"
+                                                        type="radio" value="mobileMenuUse"
+                                                        checked=""><span>不公開</span></label>
+                                                <label><input name="MenuUse" id="pcMenuUse" type="radio"
+                                                        value="pcMenuUse"><span>公開</span></label>
+                                                <div class="btn_grp">
                                                 </div>
                                             </div>
                                             <hr>
