--- a/tpmlwebref_referralsedit.htm
+++ b/tpmlwebref_referralsedit.htm
@@ -138,7 +138,7 @@
                                     <div class="tab_items">
                                     </div>
                                 </div>
-                                <!--頁籤區-->
+                               <!--頁籤區-->
                                 <div class="tab__content">
                                     <!--tabcontent 1--><!--會員設定-->
                                     <div class="active">
@@ -163,7 +163,7 @@
                                                                 <option value="2">區域2</option>
                                                                 <option value="3">區域3</option>
                                                             </select>
-                                                            <label>第一層</label>
+                                                            <label>第一層總館/區域</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp">
@@ -175,18 +175,17 @@
                                                                 <option value="2">分館2</option>
                                                                 <option value="3">分館3</option>
                                                             </select>
-                                                            <label>第二層分館</label>
+                                                            <label>第二層分館/單位</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
                                                             <input name="userId" id="userId" type="text"
-                                                                value="cof@email.tpml.edu.tw,coi@email.tpml.edu.tw,coj@email.tpml.edu.tw,com@email.tpml.edu.tw,cok@email.tpml.edu.tw">
+                                                                value="cof@email.tpml.edu.tw">
                                                             <label for="userId">信箱<abbr></abbr></label>
                                                             <div class="help">多個email帳號請用(,)隔開</div>
                                                         </div>
                                                     </div>
-
                                                 </div>
                                             </div>
                                         </div>
