--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -222,9 +222,10 @@
                                                             <select id="" name="" class="dynamicCol used">
                                                                 <option value="" selected="" disabled="disabled">
                                                                 </option>
-                                                                <option value="1" selected>公版回覆1</option>
-                                                                <option value="2">公版回覆2</option>
-                                                                <option value="3">公版回覆3</option>
+                                                                <option value="1" selected>無</option>
+                                                                <option value="2">公版回覆1</option>
+                                                                <option value="3">公版回覆2</option>
+                                                                <option value="4">公版回覆3</option>
                                                             </select>
                                                             <label>公版回覆</label>
                                                         </div>
