--- a/tpmlwebref_reviewedit.htm
+++ b/tpmlwebref_reviewedit.htm
@@ -196,7 +196,7 @@
                                                             <textarea>請輸入意見</textarea>
                                                             <label for="userId">審核意見<abbr></abbr></label>
                                                         </div>
-                                                        <div class="help">輸入回覆的內容將顯示於前台留言板(字數200/500)</div>
+                                                        <div class="help">字數200/500</div>
                                                     </div>
                                                 </div>
                                                 <hr>
