--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -394,19 +394,19 @@
                                                             <label>其他</label>
                                                         </div>
                                                     </div>
-                                                    <div class="form_grp">
+                                                   <div class="form_grp">
                                                         <div class="labelEffect">
                                                             <textarea>請輸入意見</textarea>
                                                             <label for="userId">審核意見<abbr></abbr></label>
                                                         </div>
-                                                        <div class="help">輸入回覆的內容將顯示於前台留言板(字數200/500)</div>
+                                                        <div class="help">審核意見(字數200/500)</div>
                                                     </div>
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
                                                             <textarea>文字 </textarea>
                                                             <label for="userId">審核說明<abbr></abbr></label>
                                                         </div>
-                                                        <div class="help">由總館代鍵分館問題，經總館審核判定不上架時輸入不上架原因</div>
+                                                        <div class="help">審核說明文字(字數200/500)</div>
                                                     </div>
                                                 </div>
                                                 <hr>
